# flume

./: CLAUDE.md  Cargo.toml  README.md  design.md  flake.nix
.github/workflows/: aur.yml  freebsd-port.yml  homebrew.yml  publish-packages.yml  release.yml
doc/: PUBLISHING.md  flume.1
examples/: config.toml  irc.toml
examples/scripts/: away_logger.lua  greet.py  highlight.lua  totp.py  url_title.lua
examples/themes/: catppuccin-glass.toml  catppuccin-mocha.toml  gruvbox-dark.toml  miasma-glass.toml  miasma.toml  solarized-dark.toml
flume-core/: Cargo.toml
flume-core/src/: emoji.rs  event.rs  irc_format.rs  lib.rs  logging.rs
flume-core/src/config/: dcc.rs  general.rs  keybindings.rs  llm.rs  mod.rs  server.rs  theme.rs  vault.rs
flume-core/src/connection/: mod.rs  registration.rs  sts.rs  transport.rs
flume-core/src/dcc/: chat.rs  mod.rs  transfer.rs  xdcc.rs
flume-core/src/irc/: command.rs  message.rs  mod.rs  parser.rs
flume-core/src/llm/: mod.rs  prompts.rs
flume-core/src/scripting/: api.rs  lua_runtime.rs  mod.rs  py_runtime.rs  sandbox.rs
flume-tui/: Cargo.toml
flume-tui/src/: app.rs  input.rs  keybindings.rs  main.rs  split.rs  theme.rs  url.rs
flume-tui/src/ui/: buffer_list.rs  chat_buffer.rs  input_line.rs  mod.rs  nick_list.rs  splash.rs  status_bar.rs  title_bar.rs  topic_bar.rs
packaging/aur/: PKGBUILD
packaging/deb/: build-deb.sh  control
packaging/freebsd/: Makefile  Makefile.crates
packaging/gpg/: flume-signing-key.asc
packaging/homebrew/: flume.rb
packaging/nix/: package.nix
packaging/rpm/: build-rpm.sh  flume.spec
tasks/: todo.md
