[workspace]
members = ["flume-core", "flume-tui"]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/FlumeIRC/flume"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
futures = "0.3"
