[package]
name = "flume-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
directories = "5"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
serde_json = "1.0"
mlua = { version = "0.10", features = ["lua54", "send", "vendored"] }
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[features]
default = ["llm"]
python = ["pyo3"]
llm = ["reqwest"]
