[package]
name = "flume-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
flume-core = { path = "../flume-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = { workspace = true }
regex = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
